# simple-lora-comms

./: CMakeLists.txt  Jenkinsfile  Makefile  README.org  pi-build  pi-test  test
common/: debug.cpp  debug.h  device_id.h  file_writer.cpp  packet_radio.h  packets.h  protocol.cpp  protocol.h  timer.h
mcu/: CMakeLists.txt  arduino-libraries  dependencies.sd  lora_radio.cpp  lora_radio.h  main.cpp
pi/: CMakeLists.txt  file_writer.cpp  file_writer.h  gateway_callbacks.cpp  gateway_callbacks.h  lora-receiver.cpp  lora_radio_pi.cpp  lora_radio_pi.h  main.cpp  processor.cpp  processor.h  queue.h  rh_rf95.h
protocol/: Makefile  fk-radio.proto
protocol/src/: fk-radio.pb.c  fk-radio.pb.h
src/: debug.cpp  debug.h  device_id.h  file_writer.h  fk-radio.pb.c  fk-radio.pb.h  gateway_protocol.cpp  gateway_protocol.h  lora_radio_pi.cpp  lora_radio_pi.h  lora_radio_rh.cpp  lora_radio_rh.h  node_protocol.cpp  node_protocol.h  packet_radio.cpp  packet_radio.h  packets.cpp  packets.h  protocol.cpp  protocol.h  timer.h
